testsuite/gna/bug0139/repro2.ref
repro2.vhdl:18:9:error: duplicate choices for 0 to 0
      a (15 downto 0) => v1,
        ^
